2012-10-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/52233
	* g++.dg/cpp0x/alias-decl-23.C: New.

2012-10-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53403
	* g++.dg/template/friend53.C: New.

2012-10-04  Eric Botcazou  <ebotcazou@adacore.com>

	* lib/gcc-dg.exp (cleanup-ada-spec): New procedure.
	* lib/scanasm.exp (get_ada_spec_filename): Likewise.
	(scan-ada-spec): Likewise.
	(scan-ada-spec-not): Likewise.
	* gcc.dg/dump-ada-spec-1.c: New test.
	* g++.dg/other/dump-ada-spec-1.C: Likewise.

2012-10-04  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/lto/20120723_0.c: Skip on SPARC 32-bit.

2012-10-04  Florian Weimer  <fweimer@redhat.com>

	* c-c++-common/cpp/diagnostic-pragma-1.c: New testcase.

2012-10-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54323
	* g++.dg/cpp0x/pr54323.C: New.

2012-10-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/54735
	* g++.dg/torture/pr54735.C: New testcase.

2012-10-04  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/54739
	* gcc.dg/lower-subreg-1.c: Also skip on SPARC.

2012-10-03  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/51244
	* gcc.target/sh/pr51244-12.c: New.

2012-10-03  Dehao Chen  <dehao@google.com>

	PR middle-end/54782
	* gcc.dg/pr54782.c: New test.

2012-10-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/54777
	* g++.dg/cpp0x/constexpr-ref4.C: New test.

2012-10-02  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54778
	* gfortran.dg/class_53.f90: New.

2012-10-02  Alexandre Oliva <aoliva@redhat.com>

	PR debug/54551
	* gcc.dg/guality/pr54551.c: New.

2012-10-02  Pat Haugen <pthaugen@us.ibm.com>

	* gcc.target/powerpc/pr46728-1.c: Accept xssqrtdp.
	* gcc.target/powerpc/pr46728-2.c: Likewise.

2012-10-02  Sharad Singhai  <singhai@google.com>

	PR testsuite/54772
	* gfortran.dg/vect/vect.exp: Change verbose vectorizor dump options
	to fix test failures caused by r191883.
	* gcc.dg/tree-ssa/gen-vect-11.c: Likewise.
	* gcc.dg/tree-ssa/gen-vect-2.c: Likewise.