@@ -3,7 +3,7 @@
 vector signed int 
 f(vector float a, vector signed int b) 
 {
-  return vec_splat(vec_cts(vec_ctf(vec_ctu(a, 31),0),9),30);
+  return vec_splat(vec_cts(vec_ctf(vec_ctu(a, 31),0),9),2);
 }
 
 static void test()
